[metadata]
name = trucmap
version = 0.3
author = bhavithry
author_email = bhavithry@gmail.com
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bhavithry/trucmap
project_urls =
    Bug Tracker = https://github.com/bhavithry/trucmap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
= src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
